restored default scrollbar and fixed overscroll color

--- a/src/index.css
+++ b/src/index.css
@@ -4,24 +4,13 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
-/* CSS for scrollbar */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: rgb(100 100 100);
-  border-radius: 5px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: rgb(140 140 140);
-}
-
 /* Background color to ensure overscroll remains colored */
 html {
+  @apply bg-background-secondary;
+}
+
+/* Background color for main page */
+body {
   @apply bg-background;
 }
 
